2015-06-29  Deniz Yuret  <dyuret@ku.edu.tr>

	* out-of-mem: gpu/dense gave out-of-memory error.
	- find out why
	- try 1.33x realloc (the 4th realloc can use space from 1+2)
	- try prealloc
	- try uniq
	- try sv id

	sv:
	zn11n:   165 x 788607  = 130m (epoch 1)
	zn11p:   705 x 648569  = 457m (epoch 7)
	zn11v:  1365 x 288501  = 394m (epoch 6)
	zn11c:  1365 x 232284  = 317m (epoch 1)
	zn11pv: 1905 x 304644  = 580m (epoch 10)
	zn11cp: 1905 x 306482  = 584m (epoch 6)
	zn11cv: 2565 x 119377  = 306m (epoch 1)
	zn11cpv: 3105 x 108499 = 337m (epoch 1)

	zn11n probably explodes because of k size: 128 (xbatch) x 788607.

	* TODO: check speed of gpumem()

2015-06-28  Deniz Yuret  <dyuret@ku.edu.tr>

	* test/zn11pvc.jl (net): Determining optimal gamma for pvc
	experiments (8 subsets of postag, wvec, cvec).  The datasets were
	generated using acl11features.jl.

	gamma:
	zn11n: 0.40
	zn11p: 0.17
	zn11v: 0.25
	zn11c: 0.30
	zn11pv: 0.14
	zn11cp: 0.18
	zn11cv: 0.16
	zn11cpv: 0.12

	* DONE: profiling?
	* TODO: do learning rate experiments (one-hot vs dense)

2015-06-26  Deniz Yuret  <dyuret@ku.edu.tr>

	* test/zn11perc64.jl: early convergence of regular perceptron is
	probably due to numerical accuracy.  Trying with Float64.  Fixed
	it.  Also added the (seed>0) condition to see unshuffled results.

	* TODO: run zn11orig with kperc and zn11single with perc as well.

	06261347-julia_zn11perc64_jl.out: perc+zn11orig
	- does not converge in 20 epochs but dev peaks.
	- does worse than Float32?
	best trn: (0,20,0.990577853561211,0.9628940312882318,0.9628049679369057)
	best dev: (0,12,0.9864501711719235,0.9629200614311373,0.9633301393086166)
	best tst: (0,13,0.9871840790335269,0.9627118202878934,0.9634038475713127)

	06261523-julia_zn11perc64b_jl.out: perc+zn11single
	- does much worse but does not peak in 20.
	best trn: (0,20,0.9607095614570927,0.9493974021917381,0.9487543303604334)
	best dev: (0,18,0.9596867048415946,0.9494234323346435,0.9485792732365298)